# Manga-Tagger

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  MangaTagger.py  README.md  docker-compose.yaml  install.bat  pyproject.toml  requirements.txt  run.bat  settings.json  setup.cfg
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: docker-hub.yml
MangaTaggerLib/: MangaTaggerLib.py  _version.py  api.py  database.py  database_mongodb.py  errors.py  models.py  task_queue.py  thumbnail.py  utils.py
MangaTaggerLib/api/: MangaDex.py
tests/: database.py  manga.py  test_api.py  test_integration.py  test_manga.py
tests/data/Absolute Boyfriend/: data.json  staff.json
tests/data/G-Maru Edition/: data.json  staff.json
tests/data/Peach Girl Next [EN]/: data.json  staff.json
