[metadata]
name = manga_tagger
version = 1.0.3
author = Yovarni Yearwood
author_email = yyearwood@endlessgalaxy.dev
description = The only tool you'll need to rename and write metadata to your digital manga library 
long_description = readme()
url =
license = MIT
keywords = mangatagger manga tagger tagging renamer metadata
classifiers =
  License :: OSI Approved :: MIT License
  Development Status :: 4 - Beta
  Environment :: Win32 (MS Windows)
  Operating System :: Microsoft :: Windows :: Windows 10
  Intended Audience :: End Users/Desktop
  Topic :: Utilities
  Topic :: Other/Nonlisted Topic
  Programming Language :: Python :: 3.7

[options]
packages = MangaTaggerLib
scripts =
  MangaTagger.py
install_requires =
  pymongo
  watchdog
  numpy
  jikanpy
  requests
  python_json_logger
